Fix domain__subscribe styling & add gap on rounded edges

--- a/assets/styles/layout/_layout.scss
+++ b/assets/styles/layout/_layout.scss
@@ -191,7 +191,8 @@ figure {
   }
 
   .magazine__subscribe,
-  .user__follow {
+  .user__follow,
+  .domain__subscribe {
     gap: 0.25rem
   }
 }
